# floral_oracle

./: .gitignore  README.md  concept.py  pyproject.toml
floral_oracle/: __main__.py  chain.py  corpus.py  embed_model.py  main.py  model.py  paths.py  user_interface.py
floral_oracle/utils/: device.py
