[tool.poetry]
name = "floral-oracle"
version = "0.1.0"
description = ""
authors = ["Sarosh Manzoor <sarosh.manzoor@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.0"
python-dotenv = "^1.0.1"
huggingface-hub = "^0.23.0"
jinja2 = "^3.1.4"
torch = "^2.0.0"
accelerate = "^0.30.1"
optimum = "^1.19.2"
llama-index = "^0.10.37"
docarray = "0.40.0"
langchainhub = "^0.1.15"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^24.4.2" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
